# switchbot-ble-reader

./: LICENSE  README.md  pyproject.toml  switchbot_reader.py
