[project]
name = "switchbot-ble-reader"
version = "0.1.0"
description = "SwitchBot温湿度計のBLEアドバタイズメント読み取りツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21.0",
    "requests>=2.28.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

